<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7FFF0000"
    tools:context=".Main5Activity">

    <TextView
        android:id="@+id/txt41"
        android:layout_width="123dp"
        android:layout_height="33dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt46"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt47"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="84dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt59"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="172dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt50"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="152dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt48"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt58"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="148dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt58"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="292dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt49"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="172dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt52"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt56"
        android:layout_width="214dp"
        android:layout_height="34dp"
        android:layout_marginTop="484dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt56"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="416dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt53"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="484dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt55"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="348dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt51"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt57"
        android:layout_width="181dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="548dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt57"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt60"
        android:layout_width="218dp"
        android:layout_height="26dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="84dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt60"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt54"
        android:layout_width="44dp"
        android:layout_height="25dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="216dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt54"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="165dp"
        android:layout_height="190dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flash" />

</androidx.constraintlayout.widget.ConstraintLayout>