<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#75FFEB3B"
    tools:context=".Main4Activity">

    <TextView
        android:id="@+id/txt32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="232dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt32"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt43"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="136dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt43"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txthabilmulhergaviao"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt41"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="152dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt33"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="284dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt34"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt39"
        android:layout_width="44dp"
        android:layout_height="25dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="216dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="476dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt40"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="140dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt37"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="340dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt36"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt35"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="408dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt38"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt44"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt41"
        android:layout_width="218dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt45"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt42"
        android:layout_width="181dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="556dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt42"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt31"
        android:layout_width="338dp"
        android:layout_height="34dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt31"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="243dp"
        android:layout_height="137dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gaviao" />
</androidx.constraintlayout.widget.ConstraintLayout>