<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#803F51B5"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="156dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2xt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt2"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt3"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView2xt2"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/txt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt9"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txt8"
        app:layout_constraintTop_toBottomOf="@+id/txt7" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt5"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txt4"
        app:layout_constraintTop_toBottomOf="@+id/txt3" />

    <TextView
        android:id="@+id/txt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt7"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txt6"
        app:layout_constraintTop_toBottomOf="@+id/txt5" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt4"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2xt2" />

    <TextView
        android:id="@+id/txt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt6"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt4" />

    <TextView
        android:id="@+id/txt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt8"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt6" />

    <TextView
        android:id="@+id/txt10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt10"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt8" />

    <TextView
        android:id="@+id/txt11"
        android:layout_width="217dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt11"
        app:layout_constraintStart_toEndOf="@+id/txt10"
        app:layout_constraintTop_toBottomOf="@+id/txt9" />

    <TextView
        android:id="@+id/txt12"
        android:layout_width="181dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt12"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt10" />

    <TextView
        android:id="@+id/txt13"
        android:layout_width="188dp"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt13"
        app:layout_constraintStart_toEndOf="@+id/txt12"
        app:layout_constraintTop_toBottomOf="@+id/txt11" />

    <TextView
        android:id="@+id/txt14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt14"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt12" />

    <TextView
        android:id="@+id/txt15"
        android:layout_width="234dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/coustard_black"
        android:text="@string/txt15"
        app:layout_constraintStart_toEndOf="@+id/txt14"
        app:layout_constraintTop_toBottomOf="@+id/txt13" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="313dp"
        android:layout_height="148dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/batima" />

</androidx.constraintlayout.widget.ConstraintLayout>